Change name Warehouse for Location

--- a/Smart/Views/BankTrans/List.cshtml
+++ b/Smart/Views/BankTrans/List.cshtml
@@ -7,7 +7,7 @@
     <div class="col-12" style="padding-bottom:20px">
         <p>
             <a class="btn btn-outline-link" data-toggle="collapse" href="#multiCollapseDetails" role="button"
-               aria-expanded="false" aria-controls="multiCollapseExample1">@Localizer["Resumo"]&nbsp;<i class="fas fa-sort-down"></i></a>
+               aria-expanded="false" aria-controls="multiCollapseExample1">@Localizer["Resumo"]</a>
         </p>
         <div class="collapse multi-collapse collapse @( Model.bankTrans.Count() > 0 ? "show" : "")" id="multiCollapseDetails">
             <div class="row">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col">
                     <a class="btn btn-outline-link" data-toggle="collapse" href="#advanceSearch" role="button"
-                       aria-expanded="false" aria-controls="multiCollapseExample1">@Localizer["Buscas Avançada"]&nbsp;<i class="fas fa-sort-down"></i></a>
+                       aria-expanded="false" aria-controls="multiCollapseExample1">@Localizer["Buscas Avançada"]</a>
                 </div>
             </div>
             <div class="collapse multi-collapse collapse" id="advanceSearch">
