--- a/Smart/Views/Person/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Person/_CreateOrUpdate.cshtml
@@ -67,7 +67,7 @@
     </div>
     <br />
     <p>
-        <a class="btn btn-outline-link" data-toggle="collapse" href="#multiCollapseAddress" role="button"
+        <a class="btn btn-outline-info" data-toggle="collapse" href="#multiCollapseAddress" role="button"
            aria-expanded="false" aria-controls="multiCollapseExample1"> @Localizer["Endereço"]</a>
     </p>
     <div class="collapse multi-collapse collapse" id="multiCollapseAddress">
@@ -137,7 +137,7 @@
     <hr class="mr-4" />
     <br />
     <p>
-        <a class="btn btn-outline-link" data-toggle="collapse" href="#multiCollapseExample1" role="button"
+        <a class="btn btn-outline-info" data-toggle="collapse" href="#multiCollapseExample1" role="button"
            aria-expanded="false" aria-controls="multiCollapseExample1"> @Localizer["Foto/Obs"]</a>
     </p>
     <div class="collapse multi-collapse" id="multiCollapseExample1">
