--- a/Smart/Views/Revenue/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Revenue/_CreateOrUpdate.cshtml
@@ -52,8 +52,8 @@
     </div>
     <br />
     <p>
-        <a class="btn btn-outline-link" data-toggle="collapse" href="#multiCollapseDetails" role="button"
-           aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-sort-down"></i>&nbsp;@Localizer["Detalhes da Conta"]</a>
+        <a class="btn btn-outline-info" data-toggle="collapse" href="#multiCollapseDetails" role="button"
+           aria-expanded="false" aria-controls="multiCollapseExample1"> @Localizer["Detalhes da Conta"]</a>
     </p>
     <div class="collapse multi-collapse collapse" id="multiCollapseDetails">
         <div class="form-row">
