--- a/Smart/Views/Warehouse/Add.cshtml
+++ b/Smart/Views/Warehouse/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Domain.Production.Warehouse
+﻿@model Core.Domain.Production.Location
 @{ ViewData["Title"] = ViewsLocalizer["Depósitos"]; ViewBag.PageClass = "container"; }
 @section topright{
     @{ Html.RenderPartialIf("_HeaderConfiguracoes", SignInManager.IsSignedIn(User)); }
