--- a/Smart/Views/Warehouse/List.cshtml
+++ b/Smart/Views/Warehouse/List.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Core.Domain.Production.Warehouse>
+@model IEnumerable<Core.Domain.Production.Location>
 @{ ViewData["Title"] = ViewsLocalizer["Depósitos"]; ViewBag.PageClass = "container"; }
 @section topright{
     @{ Html.RenderPartialIf("_HeaderConfiguracoes", SignInManager.IsSignedIn(User)); }
