--- a/Smart/Views/Warehouse/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Warehouse/_CreateOrUpdate.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Domain.Production.Warehouse
+﻿@model Core.Domain.Production.Location
    @{ Layout = null; }
     @Html.HiddenFor(a => a.WarehouseId)
     @Html.HiddenFor(a => a.BusinessEntityId)
