--- a/Smart/Views/Warehouse/_CreateOrUpdate.cshtml
+++ b/Smart/Views/Warehouse/_CreateOrUpdate.cshtml
@@ -3,11 +3,21 @@
     @Html.HiddenFor(a => a.WarehouseId)
     @Html.HiddenFor(a => a.BusinessEntityId)
 <div class="controls">
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label asp-for="Name">@Localizer["Nome"]</label>
-                <input asp-for="Name" placeholder="@Localizer["Nome"]" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label asp-for="Name">@Localizer["Nome"]</label>
+            <input asp-for="Name" placeholder="@Localizer["Nome"]" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+
+        <div class="form-group col-md-6">
+            <label asp-for="DefaultLocation"><br /></label>
+            <div class="checkbox">
+                <label>
+                    <input asp-for="DefaultLocation" type="checkbox" class="checkbox style-0" />
+                    <span><label asp-for="DefaultLocation">@Localizer["Local Padrão"]</label></span>
+                </label>
             </div>
         </div>
+    </div>
 </div>
